hero section macbook whitespace fixes

--- a/themes/coupling/source/css/index.styl
+++ b/themes/coupling/source/css/index.styl
@@ -209,7 +209,7 @@ section.hero
   padding-top 20px
   z-index 20
   +media1200()
-    padding-top 40px
+    padding-top 0
 
   .sectionInner
     padding-bottom 20px
@@ -225,6 +225,8 @@ section.hero
   .heroLeft
     +media1200()
       margin-right 50px
+      position relative
+      bottom 20px
     +media1200()
       margin-right 100px
 
@@ -255,8 +257,8 @@ section.hero
     margin-top 20px
     margin-bottom 15px
     +media1200()
-      font-size 45px
-      margin-top 50px
+      font-size 42px
+      margin-top 20px
 
   .subtitle
     font-size 22px
@@ -265,7 +267,7 @@ section.hero
     text-align center
     +media1200()
       font-size 26px
-      margin 10px 0 50px 0
+      margin 10px 0 30px 0
 
   .subscribeForm
     +media1200()
@@ -283,7 +285,7 @@ section.hero
     display inline-block
     height auto
     font-weight 400
-    margin-top 30px
+    margin-top 10px
     i
       margin-right 5px
 
@@ -371,11 +373,11 @@ section.blogSection
         margin 0 auto
         transform scaleX(5) scaleY(0.5) rotate(180deg)
         z-index 55
-        path  
+        path
           fill rgba($red, 0.95)
-          transition fill .2s 
+          transition fill .2s
       &:hover .wave path
-        fill $red 
+        fill $red
       +media1200()
         .wave
           bottom 80px
@@ -396,7 +398,7 @@ section.blogSection
     h3
       color $white
       font-size 18px
-      line-height 1.5 
+      line-height 1.5
       margin 0
       +media1200()
         font-size 28px
@@ -404,7 +406,7 @@ section.blogSection
     a
       text-shadow none
     .blogImage
-      background-color $darkblue 
+      background-color $darkblue
       background-position 50% 10%
       background-repeat no-repeat
       background-size 100% auto
@@ -412,7 +414,7 @@ section.blogSection
       boxShadow()
       display inline-block
       height 240px
-      margin 0 
+      margin 0
       max-width 100%
       position relative
       transform scale(1)
@@ -426,7 +428,7 @@ section.blogSection
       align-items flex-start
       background rgba($red, 0.95)
       bottom 0
-      border-radius 0 
+      border-radius 0
       display flex
       align-items flex-start
       flex-direction column
@@ -434,7 +436,7 @@ section.blogSection
       padding 10px
       position absolute
       transition background .2s
-      width 100% 
+      width 100%
       +media1200()
         padding 5px 20px 10px 20px
     .blogDate
@@ -463,7 +465,7 @@ section.footer
   justify-content center
   padding 80px 0 40px 0
   width 100%
-  z-index -1 
+  z-index -1
 
   a
     font-size 36px
